--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="de.inovex.mobi.rsdemos"
       android:versionCode="1"
       android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="13" />
+    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="13" android:maxSdkVersion="14"/>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".MandelbrotActivity">
